newclay/test/Compiler/StaticEvaluator/Fail/ModuleAmbiguousImport/main.clay
import __primitives__.*;
import factorial.*; // has Factorial
import tools.*; // also has Factorial

symbol Main;
overload #Main() = Factorial(8);
